--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -343,3 +343,14 @@ entrypoint = "./functions/hello/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/hello/*.html" ]
+
+[functions.create-profile]
+enabled = true
+verify_jwt = true
+import_map = "./functions/create-profile/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/create-profile/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/create-profile/*.html" ]
