--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -356,3 +356,25 @@ entrypoint = "./functions/get-profile/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/get-profile/*.html" ]
+
+[functions.create-team]
+enabled = true
+verify_jwt = true
+import_map = "./functions/create-team/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/create-team/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/create-team/*.html" ]
+
+[functions.join-team]
+enabled = true
+verify_jwt = true
+import_map = "./functions/join-team/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/join-team/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/join-team/*.html" ]
