--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -378,3 +378,14 @@ entrypoint = "./functions/join-team/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/join-team/*.html" ]
+
+[functions.get-team]
+enabled = true
+verify_jwt = true
+import_map = "./functions/get-team/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/get-team/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/get-team/*.html" ]
