--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -389,3 +389,25 @@ entrypoint = "./functions/get-team/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/get-team/*.html" ]
+
+[functions.create-product]
+enabled = true
+verify_jwt = true
+import_map = "./functions/create-product/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/create-product/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/create-product/*.html" ]
+
+[functions.get-product]
+enabled = true
+verify_jwt = true
+import_map = "./functions/get-product/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/get-product/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/get-product/*.html" ]
