fix linting errors

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -422,3 +422,25 @@ entrypoint = "./functions/update-product/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/update-product/*.html" ]
+
+[functions.update-product-status]
+enabled = true
+verify_jwt = true
+import_map = "./functions/update-product-status/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/update-product-status/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/update-product-status/*.html" ]
+
+[functions.delete-old-products]
+enabled = true
+verify_jwt = true
+import_map = "./functions/delete-old-products/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/delete-old-products/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/delete-old-products/*.html" ]
