--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -444,3 +444,14 @@ entrypoint = "./functions/delete-old-products/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/delete-old-products/*.html" ]
+
+[functions.list-products]
+enabled = true
+verify_jwt = true
+import_map = "./functions/list-products/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/list-products/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/list-products/*.html" ]
